h2. 1.0.1, releases 02/12/2008

* Added implementation of GET /api.xro/1.0/accounts
* Replaced Invoice.id, Contact.id etc with Invoice.invoice_id, Contact.contact_id to avoid Object.id errors


h2. 1.0.0, released 01/12/2008

* Initial release, including:
* PUT /api.xro/1.0/contact
* GET /api.xro/1.0/contact
* GET /api.xro/1.0/contacts
* PUT /api.xro/1.0/invoice
* GET /api.xro/1.0/invoice
* GET /api.xro/1.0/invoices