@@ -15,7 +15,9 @@ require File.dirname(__FILE__) + "/xero_gateway/contact"
 require File.dirname(__FILE__) + "/xero_gateway/address"
 require File.dirname(__FILE__) + "/xero_gateway/phone"
 require File.dirname(__FILE__) + "/xero_gateway/account"
+require File.dirname(__FILE__) + "/xero_gateway/tracking_category"
 require File.dirname(__FILE__) + "/xero_gateway/messages/contact_message"
 require File.dirname(__FILE__) + "/xero_gateway/messages/invoice_message"
 require File.dirname(__FILE__) + "/xero_gateway/messages/account_message"
+require File.dirname(__FILE__) + "/xero_gateway/messages/tracking_category_message"
 require File.dirname(__FILE__) + "/xero_gateway/gateway"
